# proplib

./: CMakeLists.txt  LICENSE.txt  main.cpp  property.cpp  property.h  raii.h  test_property.cpp  todo.txt
demo/: main.cpp
documentation/: property.md  screen_units.md
experiments/: main.cpp
prop/platform/: platform.h  platform_ansi_console.cpp  platform_dummy_console.cpp  platform_sfml.cpp
prop/tests/ui/: test_label.cpp  test_vertical_layout.cpp  test_widget.cpp
prop/tests/utility/: test_binding.cpp  test_dependency_tracer.cpp  test_polywrap.cpp  test_property.cpp  test_rect.cpp  test_required_pointer.cpp  test_screen_units.cpp  test_signal.cpp  test_tracking_list.cpp  test_tracking_pointer.cpp
prop/ui/: button.cpp  button.h  combobox.cpp  combobox.h  horizontal_layout.cpp  label.cpp  label.h  vertical_layout.cpp  vertical_layout.h  widget.cpp  widget.h  window.cpp  window.h
prop/utility/: binding.cpp  callable.h  canvas.cpp  canvas.h  color.cpp  color.h  dependency_tracer.cpp  dependency_tracer.h  font.cpp  font.h  font.privates.h  polywrap.cpp  polywrap.h  property.cpp  property.h  property_decls.cpp  property_decls.h  property_details.cpp  property_details.h  property_link.cpp  property_link.h  raii.h  rect.cpp  rect.h  screen_units.h  style.cpp  style.h  tracking_list.h  tracking_pointer.h  type_list.h  type_name.h  utility.cpp  utility.h
proplib/internals/: button.privates.h  label.privates.h  vertical_layout.privates.h  widget.privates.h  window.privates.h
proplib/platform/: platform.h  platform_sfml.cpp  platform_xrandr_screen.cpp  platform_xrandr_screen.h
proplib/tests/: test_binding.cpp  test_polywrap.cpp  test_property.cpp  test_signal.cpp
proplib/tests/ui/: test_label.cpp  test_vertical_layout.cpp  test_widget.cpp
proplib/tests/utility/: test_binding.cpp  test_dependency_tracer.cpp  test_polywrap.cpp  test_property.cpp  test_rect.cpp  test_screen_units.cpp  test_signal.cpp  test_tracking_pointer.cpp
proplib/ui/: button.cpp  button.h  combobox.cpp  combobox.h  label.cpp  label.h  label.privates.h  vertical_layout.cpp  vertical_layout.h  widget.cpp  widget.h  widget.privates.h  window.cpp  window.h
proplib/utility/: alignment.h  binding.cpp  binding.h  callable.h  canvas.cpp  color.cpp  color.h  compatibility.h  dependency_tracer.cpp  dependency_tracer.h  exceptions.h  font.cpp  font.h  orientation.h  polywrap.h  property.cpp  property.h  property_details.cpp  property_details.h  property_link.cpp  property_link.h  raii.h  rect.cpp  rect.h  required_pointer.h  screen_units.cpp  screen_units.h  signal.h  style.cpp  style.h  tracking_list.cpp  tracking_list.h  tracking_pointer.cpp  tracking_pointer.h  type_list.h  type_name.h  type_traits.h  utility.cpp  utility.h  widget_helper.h
